<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Управление складом</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Войти</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="forgot_password">Забыли?</string>
    <string name="login_error">Неверный логин или пароль</string>
    <string name="connection_error">Ошибка соединения с сервером</string>
    <string name="login_success">Авторизация успешна!</string>
    <string name="login_authorization">Авторизация в системе</string>
    <string name="admin_panel">Панель администратора</string>
    <string name="manager_panel">Панель менеджера</string>
    <string name="staff_panel">Панель сотрудника</string>
    <string name="loading">Загрузка...</string>
    <string name="back">Назад</string>
</resources>